[gd_scene load_steps=8 format=3 uid="uid://d4qvxkwkl4p4d"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.7, 1, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 32
font_color = Color(1, 1, 0.2, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_info"]
font_size = 18
font_color = Color(0.9, 0.9, 1, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 0.8)

[sub_resource type="LabelSettings" id="LabelSettings_controls"]
font_size = 16
font_color = Color(0.7, 0.8, 1, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.2, 0.8, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_hud")

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0

[node name="LevelLabel" type="Label" parent="TopPanel/VBoxContainer"]
layout_mode = 2
text = "Crystal Caverns"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="InfoContainer" type="HBoxContainer" parent="TopPanel/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="TopPanel/VBoxContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 0"
label_settings = SubResource("LabelSettings_info")

[node name="LivesLabel" type="Label" parent="TopPanel/VBoxContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lives: 3"
label_settings = SubResource("LabelSettings_info")
horizontal_alignment = 2

[node name="CollectiblesLabel" type="Label" parent="TopPanel/VBoxContainer"]
layout_mode = 2
text = "Collectibles: 0/5"
label_settings = SubResource("LabelSettings_info")
horizontal_alignment = 1

[node name="ControlsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -180.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "CONTROLS"
label_settings = SubResource("LabelSettings_info")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ControlsPanel/VBoxContainer"]
layout_mode = 2

[node name="MovementLabel" type="Label" parent="ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "WASD - Move"
label_settings = SubResource("LabelSettings_controls")

[node name="JumpLabel" type="Label" parent="ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "SPACE - Jump"
label_settings = SubResource("LabelSettings_controls")

[node name="DashLabel" type="Label" parent="ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "SHIFT - Dash"
label_settings = SubResource("LabelSettings_controls")

[node name="MouseLabel" type="Label" parent="ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "Mouse - Look Around"
label_settings = SubResource("LabelSettings_controls")

[node name="EscapeLabel" type="Label" parent="ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "ESC - Pause/Mouse"
label_settings = SubResource("LabelSettings_controls")

[node name="ProgressPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="ProgressPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0

[node name="ProgressLabel" type="Label" parent="ProgressPanel/VBoxContainer"]
layout_mode = 2
text = "Level Progress"
label_settings = SubResource("LabelSettings_info")
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="ProgressPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_progress")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")
value = 25.0